--- a/dashboard_unir/Dockerfile
+++ b/dashboard_unir/Dockerfile
@@ -12,4 +12,4 @@ RUN pip install -r requirements.txt
 COPY . .
 
 # Ejecutar el servidor de desarrollo de Django
-CMD ["python", "manage.py", "runserver", "0.0.0.0:8000"]
+CMD ["python3", "manage.py", "runserver", "localhost:8000"]
