--- a/dashboard_unir/docker-compose.yml
+++ b/dashboard_unir/docker-compose.yml
@@ -9,7 +9,7 @@ services:
       MONGO_INITDB_ROOT_PASSWORD: admin123
   web:
     build: .
-    command: python manage.py runserver 0.0.0.0:8000
+    command: python manage.py runserver localhost:8000
     volumes:
       - .:/code
     ports:
